--- a/AtkTennis/Views/Admin/AdminHome.cshtml
+++ b/AtkTennis/Views/Admin/AdminHome.cshtml
@@ -479,9 +479,9 @@
                                 </div>
                                 <!-- /.card-tools -->
                             </div>
-                            <div class="card-body">
+                            @*<div class="card-body">
                                 <div id="world-map" style="height: 250px; width: 100%;"></div>
-                            </div>
+                            </div>*@
                             <!-- /.card-body-->
                             <div class="card-footer bg-transparent">
                                 <div class="row">
@@ -508,6 +508,7 @@
                         <!-- solid sales graph -->
                         <div class="card bg-gradient-info">
                             <div class="card-header border-0">
+                               
                                 <h3 class="card-title">
                                     <i class="fas fa-th mr-1"></i>
                                     Sales Graph
@@ -600,9 +601,9 @@
                 <!-- /.row (main row) -->
             </div><!-- /.container-fluid -->
         </section>
-
-
 <!-- /.content -->
+
+
             }
             else
             {
