--- a/AtkTennisWeb/Views/Shared/_Layout.cshtml
+++ b/AtkTennisWeb/Views/Shared/_Layout.cshtml
@@ -231,7 +231,7 @@
                             <ul class="nav nav-treeview">
 
                                 @{ 
-                                    DateTime today = DateTime.UtcNow.Date;
+                                    DateTime today = DateTime.Now;
                                     var date = today.ToString("yyyy-MM-dd");
                                 }
 
