--- a/AtkTennisWeb/Views/SystemSettings/IdentityRoleSettings.cshtml
+++ b/AtkTennisWeb/Views/SystemSettings/IdentityRoleSettings.cshtml
@@ -370,6 +370,7 @@
             async: true,
             success: function (res) {
 
+                debugger;
 
                 if (res == true) {
 
